feat: add task automations
